Начал добавлять реализацию бд на json, надеюсь запустить на ноуте в будущем, не хочу заниматься с mysql там